--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "async": "^3.2.0",
     "csv-headers": "^1.0.0",
     "csv-parse": "^4.8.8",
+    "csvtojson": "^2.0.10",
     "event-stream": "^4.0.1",
     "fast-csv": "^4.1.3",
     "fs": "0.0.1-security",
+    "iconv-lite": "^0.5.1",
     "knex": "^0.20.11",
     "mysql": "^2.18.1"
   }
