--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.0",
+    "cluster": "^0.7.7",
     "csv-headers": "^1.0.0",
     "csv-parse": "^4.8.8",
     "csv-stream": "^0.2.0",
